# internal/finance/ports/create_fund_provider_handler.go
@@ -23,6 +23,7 @@ func (hs HttpServer) CreateFundProvider(w http.ResponseWriter, r *http.Request) 
 
 	if err := hs.application.Commands.CreateFundProvider.Handle(r.Context(), command.CreateFundProviderCmd{
 		Name:         req.Name,
+		FpType:       req.FpType,
 		InitBalance:  req.InitBalance,
 		CurrencyCode: req.Currency,
 	}); err != nil {
